fixing z-index of bouncing arrow

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -81,6 +81,7 @@
 }
 
 .bouncingArrow {
+	z-index: -1;
 	position: relative;
 	top: -2px;
 }
